# PythonToDoList

./: .gitignore  ToDo.db  pyproject.toml
HtmlToDoList/: index.html  package-lock.json  package.json
HtmlToDoList/src/: App.vue  style.css
VueToDoList/: package-lock.json  package.json
VueToDoList/src/: App.vue
alembic/: env.py
alembic/versions/: 2023_01_10_2324-12e7ecd238a4_addnotetodatabase.py
app/: Utils.py  __init__.py  __main__.py  config.py  dependencies.py  models.py  routes.py
